2007-02-22  Scott Reeves  <sreeves@novell.com>
	* etc/YaST-gnome.desktop.in
	* etc/Makefile.am:
	Fix up desktop file - BNC #248025 and #240240

2007-02-05  Michael Meeks  <michael.meeks@novell.com>

	* configure.in: remove
	* autogen.sh: update
	* POTFILES, MAINTAINER, VERSION, RPMNAME,
	* configure.in.in, Makefile.cvs: add, do things
	the 'yast' way.

2007-02-02  Scott Reeves  <sreeves@novell.com>
	
	* src/control-center.c
	  etc/yast2-control-center.schemas.in:
	Remove default tasks - BNC#240242
	Update to latest libslab code.

2007-01-26  Scott Reeves  <sreeves@novell.com>
	
	* src/control-center.c:
	Fix for BNC #236464 - duplicated items.
	Fix for gnome.org #395133 - tasks launched twice.
	Remove .desktop file now that yast2 launches us

2006-10-30  Scott Reeves  <sreeves@novell.com>
	
	* src/control-center.c:
	Roll in latest updates from gnome-main-menu CC.
	Fix to build with new gnome-main-menu (2006-10-25 changes)

2006-10-09  Michael Meeks  <michael.meeks@novell.com>

	* Version 1.1.1

	* src/control-center.c (main): add gtk_init to
	overcome console warnings wrt. display.

	* etc/YaST-gnome.desktop.in: add missing categories
	so we showup in the app browser, add Root auth bits.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* src/control-center.c: prune bogus includes.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* src/Makefile.am: rename the binary, tweak some
	strings.

	* etc/Makefile.am (desktop_DATA, schemas_DATA): 
	rename files to be more verbose & similar to
	existing yast2 stuff.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* Revision 33253 worked.

2006-10-06  Michael Meeks  <michael.meeks@novell.com>

	* Checkin yast2-control-center-gnome
