@@ -1,31 +1,31 @@
 <gconfschemafile>
 	<schemalist>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_actions_list</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_actions_list</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_actions_list</key>
+			<applyto>/apps/y2cc-gnome/cc_actions_list</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>list</type>
 			<list_type>string</list_type>
+			<default>[]</default>
 			<locale name="C">
-				<default>[]</default>
 				<short>Task names and associated .desktop files</short>
-				<long>The task name to be displayed in the y2cc-gnome (thus needing to be translated) followed by a ";" separator then the filename of an associated .desktop file to launch for that task.</long>
+				<long>The task name to be displayed in the control-center (thus needing to be translated) followed by a ";" separator then the filename of an associated .desktop file to launch for that task.</long>
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_static_action</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_static_action</key>
+			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_static_action</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
 			<locale name="C">
-				<short>Close the y2cc-gnome when a task is activated</short>
-				<long>if true, the y2cc-gnome will close when a "Common Task" is activated</long>
+				<short>Close the control-center when a task is activated</short>
+				<long>if true, the control-center will close when a "Common Task" is activated</long>
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_start</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_start</key>
+			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_start</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -35,8 +35,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_help</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_help</key>
+			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_help</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -46,8 +46,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_add_remove</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_add_remove</key>
+			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_add_remove</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
@@ -57,8 +57,8 @@
 			</locale>
 		</schema>
 		<schema>
-			<key>/schemas/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</key>
-			<applyto>/desktop/gnome/applications/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</applyto>
+			<key>/schemas/apps/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</key>
+			<applyto>/apps/y2cc-gnome/cc_exit_shell_on_action_upgrade_uninstall</applyto>
 			<owner>y2cc-gnome</owner>
 			<type>bool</type>
 			<default>false</default>
