@@ -1,3 +1,12 @@
+2007-02-28  Scott Reeves  <sreeves@novell.com>
+	* /etc/YaST-gnome.desktop.in
+	* /etc/Makefile.am
+	* /etc/yast2-control-center-gnome.schemas.in
+	* /src/control-center.c:
+	Another attempted fix for 240240
+	Update schema file to install in a better gconf prefix and modify
+	strings to exactly match existing ones in g-m-m CC.
+
 2007-02-22  Scott Reeves  <sreeves@novell.com>
 	* etc/YaST-gnome.desktop.in
 	* etc/Makefile.am:
